--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A simple wrapper for express render metod, which allows you to receive the rendering result through promise",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "nyc mocha",
+    "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
@@ -24,7 +25,9 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
+    "coveralls": "^3.0.6",
     "mocha": "^6.2.1",
+    "nyc": "^14.1.1",
     "sinon": "^7.5.0"
   }
 }
