--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "mocha": "^6.2.1",
     "nyc": "^14.1.1",
     "sinon": "^7.5.0"
+  },
+  "dependencies": {
+    "@types/express-serve-static-core": "^4.16.9"
   }
 }
